# consy

./: consy.cabal
.github/workflows/: ci.yml
src/: Consy.hs
src/Consy/: AccumulatingMaps.hs  Basic.hs  ExtractingSublists.hs  Folds.hs  Generic.hs  Indexing.hs  InfiniteLists.hs  OrderedLists.hs  Scans.hs  SearchingWithPredicate.hs  SetOperations.hs  SpecialFolds.hs  Transformations.hs  Zipping.hs
tests/: Main.hs
tests/benchmarks/: Benchmarks.hs
tests/inspection/: InspectionTests.hs
tests/inspection/InspectionTests/: AccumulatingMaps.hs  Basic.hs  ExtractingSublists.hs  Folds.hs  Generic.hs  Indexing.hs  InfiniteLists.hs  OrderedLists.hs  Scans.hs  SearchingByEquality.hs  SearchingWithPredicate.hs  SetOperations.hs  SpecialFolds.hs  SublistsWithPredicates.hs  Transformations.hs  TransformationsMap.hs  Unfolding.hs  Zipping.hs
