cabal-version: 3.0
name: consy
version: 0.1.0.0
synopsis: Data.List-style operations built on Control.Lens.Cons
description:
  Implementing the Data.List API using Control.Lens.Cons without sacrificing
  performance.
license: BSD-3-Clause
author: Isaac Elliott, Erzsebet Nemeth
maintainer: Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
category: Data
build-type: Simple
tested-with:
  GHC == 9.6.7,
  GHC == 9.8.4,
  GHC == 9.10.3,
  GHC == 9.12.4,
  GHC == 9.14.1
extra-doc-files:
  README.md

source-repository head
  type: git
  location: https://github.com/fishtreesugar/consy.git

common language
  default-language: Haskell2010

common core-dependencies
  build-depends:
    base >=4.18 && <4.23,
    bytestring >=0.11.4 && <0.13,
    containers >=0.6.7 && <0.9,
    lens >=5.2 && <5.4,
    text >=1.2.5 && <2.2,
    vector >=0.13 && <0.14

library
  import:
    language,
    core-dependencies

  exposed-modules:
    Consy

  other-modules:
    Consy.AccumulatingMaps,
    Consy.Basic,
    Consy.Eq,
    Consy.ExtractingSublists,
    Consy.Folds,
    Consy.Indexing,
    Consy.InfiniteLists,
    Consy.Scans,
    Consy.SearchingByEquality,
    Consy.SearchingWithPredicate,
    Consy.SpecialFolds,
    Consy.SublistsWithPredicates,
    Consy.Transformations,
    Consy.TransformationsMap,
    Consy.Traversable,
    Consy.Unfolding,
    Consy.Zipping

  hs-source-dirs:
    src

library consy-inspection-tests
  import:
    language,
    core-dependencies

  exposed-modules:
    InspectionTests,
    InspectionTests.AccumulatingMaps,
    InspectionTests.Basic,
    InspectionTests.ExtractingSublists,
    InspectionTests.Folds,
    InspectionTests.Indexing,
    InspectionTests.InfiniteLists,
    InspectionTests.Scans,
    InspectionTests.SearchingByEquality,
    InspectionTests.SearchingWithPredicate,
    InspectionTests.SpecialFolds,
    InspectionTests.SublistsWithPredicates,
    InspectionTests.Transformations,
    InspectionTests.TransformationsMap,
    InspectionTests.Unfolding,
    InspectionTests.Zipping

  hs-source-dirs:
    tests/inspection

  build-depends:
    consy,
    tasty >=1.5 && <1.6,
    tasty-inspection-testing >=0.2.1 && <0.3

test-suite consy-tests
  import:
    language

  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    tests

  build-depends:
    base >=4.18 && <4.23,
    consy,
    consy-inspection-tests,
    hedgehog >=1.3 && <1.8,
    tasty >=1.5 && <1.6,
    tasty-hedgehog >=1.4 && <1.5,
    text >=1.2.5 && <2.2,
    vector >=0.13 && <0.14

benchmark consy-benchmarks
  import:
    language,
    core-dependencies

  type: exitcode-stdio-1.0
  main-is: Benchmarks.hs
  hs-source-dirs:
    tests/benchmarks

  build-depends:
    consy,
    consy-inspection-tests,
    tasty-bench >=0.5 && <0.6
